# mlops-deploy-alura

./: Dockerfile  LICENSE  Makefile  README.md  app.yaml  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
mlops_deploy_course/app/: main.py
notebooks/: analise-sentimento.ipynb  house-prices.ipynb  usando-requests.ipynb
