[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_deploy_course"
version = "0.0.1"
description = "Projeto desenvolvido com o objetivo de aprender t\u00e9cnicas de deploy de projetos de data science"
authors = [
  { name = "Acucena.Soares" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mlops_deploy_course"]
force_sort_within_sections = true
